added cloudinary for images and tidb database with a unique look for our project